# pymirror

./: .gitignore  README.md  TODO.md  a.json  a.sh  db.sh  depreciation_report.csv  fontlist.txt  map_test.py  map_test.sh  pstat.sh  pymirror.code-workspace  pymirror.db  pyproject.toml  requirement-macos.txt  run.debug  run.rpi  run.sh  taskmgr.debug  taskmgr.sh  test.sql  testapikey.py  trips.csv  turo-debug.sh  turo.debug  turo.sh  turo.sqlite  turo_depreciation.py  turo_trip.sql
apps/pmtaskmgr/: pmtask.py  pmtaskmgr.py  pmutils.py
apps/task_manager/: pmtask.py
configs/digital_frame/: config.json  digital_frame.json
configs/gls/: slideshow.json
configs/gls02/: config.json  ical2.json
configs/gls03/: config.json
configs/macos/: config.json
configs/mm2/: calendar-dates.json  calendar-icons.json  calendar-text.json  compliments.json  config.json  date.json  news.json  pymirror_controller.json  seconds.json  slideshow.json  time.json
configs/rpi/: alert.json  analog_clock.json  analog_clock2.json  config.json  cron_test.json  date.json  day_of_week.json  fonts.json  forecast.json  fortune.json  image.json  ir.json  keyboard.json  news.json  pymirror_controller.json  rainbow.json  slideshow.json  (+8 more)
glslib/: crontab.py  glsdb.py  gson.py  ical_parser.py  logger.py  pstat.py  to_types.py
holiday_files/: birthdays.json  pocahontas-availability.json
pmtaskmgr/: pmtaskmgr.py
scripts/: install-libs.sh  ir_test.sh  logs.sh  mk-user.sh  newuser.sh  profile.sh  purge.sh  pymirror.profile  sound_event.sh  turo_depreciation.sh
src/: pmlogger.py  pmutils.py
(+430 files in other folders)
